--- a/Cancer_Detection_using_transfer_learning/Cancer_Detection_using_transfer_learning.ipynb
+++ b/Cancer_Detection_using_transfer_learning/Cancer_Detection_using_transfer_learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Cancer_Detection_using_transfer_learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqxNZEz9OIsIU4l9KwcP+Z",
+      "authorship_tag": "ABX9TyP3WneM7UeOGX44dp0mlVAd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Darktechie-programmer/Deep_learning_projects/blob/master/Cancer_Detection_using_transfer_learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Darktechie-programmer/Deep_learning_projects/blob/master/Cancer_Detection_using_transfer_learning/Cancer_Detection_using_transfer_learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
         "## install the dependencies\n",
         "!pip install kaggle"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,10 +87,11 @@
         "outputId": "7a0ff922-21fe-4f82-c5aa-d97755ad5c1a"
       },
       "source": [
+        "## upload the link and key for the kaggle connection\n",
         "from google.colab import files\n",
         "files.upload()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -142,13 +143,14 @@
         "colab": {}
       },
       "source": [
+        "## add the folder \n",
         "!mkdir -p ~/.kaggle\n",
         "!cp kaggle.json ~/.kaggle/\n",
         "\n",
         "## change the permission \n",
         "!chmod 600 ~/.kaggle/kaggle.json"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -163,9 +165,10 @@
         "outputId": "46200faa-82d9-4310-e349-764496181cd5"
       },
       "source": [
+        "# add the my username in kaggle\n",
         "!kaggle kernels list — user techieamit  — sort-by dateRun"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,9 +192,10 @@
         "outputId": "fa51eada-0d0f-4961-920d-19ff09838af7"
       },
       "source": [
+        "### download or can say link the dataset to colab \n",
         "!kaggle datasets download -d paultimothymooney/chest-xray-pneumonia"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,9 +216,10 @@
         "colab": {}
       },
       "source": [
+        "## unzip the dataset\n",
         "!unzip -q chest-xray-pneumonia.zip -d ."
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -225,6 +230,7 @@
         "colab": {}
       },
       "source": [
+        "# Import the libraries....\n",
         "%matplotlib inline\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -243,7 +249,7 @@
         "from keras.applications.vgg16 import preprocess_input, decode_predictions\n",
         "from sklearn.linear_model import LogisticRegression"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +274,7 @@
         "from glob import glob\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -283,9 +289,10 @@
         "outputId": "9e3cc69c-5b36-48a5-8c65-a79a49ba6344"
       },
       "source": [
+        "## check the how many folder in the dataset\n",
         "!ls chest_xray/"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -310,7 +317,7 @@
         "train_path = 'chest_xray/train/'\n",
         "valid_path = 'chest_xray/test/'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +337,7 @@
         "\n",
         "vgg = VGG16(input_shape=IMAGE_SIZE + [3], weights='imagenet', include_top=False)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -354,7 +361,7 @@
         "for layer in vgg.layers:\n",
         "    layer.trainable = False"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -368,7 +375,7 @@
         "# useful for getting number of output classes\n",
         "folders = glob('chest_xray/train/*')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +389,7 @@
         "# our layers - you can add more if you want\n",
         "x = Flatten()(vgg.output)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +405,7 @@
         "# create a model object\n",
         "model = Model(inputs=vgg.input, outputs=prediction)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -416,7 +423,7 @@
         "# view the structure of the model\n",
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,7 +498,7 @@
         "  metrics=['accuracy']\n",
         ")"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -512,7 +519,7 @@
         "\n",
         "test_datagen = ImageDataGenerator(rescale = 1./255)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +540,7 @@
         "                                                 batch_size = 32,\n",
         "                                                 class_mode = 'categorical')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,7 +568,7 @@
         "                                            batch_size = 32,\n",
         "                                            class_mode = 'categorical')"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +601,7 @@
         "  validation_steps=len(test_set)\n",
         ")"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +640,7 @@
         "plt.show()\n",
         "# plt.savefig('LossVal_loss')"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -680,7 +687,7 @@
         "plt.show()\n",
         "# plt.savefig('AccVal_acc')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -721,10 +728,10 @@
         "import tensorflow as tf\n",
         "\n",
         "from keras.models import load_model\n",
-        "\n",
+        "## save the model \n",
         "model.save('model_vgg16.h5')"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -742,7 +749,7 @@
         "\n",
         "# Use after next.."
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -753,13 +760,14 @@
         "colab": {}
       },
       "source": [
+        "## these libraries use for load and check the model\n",
         "from keras.models import load_model\n",
         "from keras.preprocessing import image\n",
         "from keras.applications.vgg16 import preprocess_input\n",
         "import numpy as np\n",
         "model_check = load_model('model_vgg16.h5')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,13 +778,15 @@
         "colab": {}
       },
       "source": [
+        "## test 1: \n",
+        "## load the image and check the prediction\n",
         "img = image.load_img('chest_xray/val/PNEUMONIA/person1946_bacteria_4874.jpeg',target_size=(224,224))\n",
         "ans = image.img_to_array(img)\n",
         "ans = np.expand_dims(ans, axis=0)\n",
         "img_data = preprocess_input(ans)\n",
         "classes = model.predict(img_data)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -791,9 +801,10 @@
         "outputId": "541d378b-1d5a-46c3-9fe0-c58dc1bd9be8"
       },
       "source": [
+        "## classes give the ans... first value for NORMAL second for Cancer\n",
         "classes"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,12 +832,13 @@
         "outputId": "2722def5-8dad-4f61-fa0c-16ec252a3f1a"
       },
       "source": [
+        "## check the prediction\n",
         "if classes[0][0] <= 0.5:\n",
         "  print(\"Oops! You have cancer.\")\n",
         "else:\n",
         "  print(\"Great! You don't have cancer.\")"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,6 +861,7 @@
         "outputId": "72358de5-303f-4ca7-a663-6c6ca7803877"
       },
       "source": [
+        "## test 2: \n",
         "img = image.load_img('chest_xray/val/NORMAL/NORMAL2-IM-1431-0001.jpeg',target_size=(224,224))\n",
         "ans = image.img_to_array(img)\n",
         "ans = np.expand_dims(ans, axis=0)\n",
@@ -859,7 +872,7 @@
         "else:\n",
         "  print(\"Great! You don't have cancer.\")"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
